--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "heroku-postbuild": "cd frontend/yoga_app && npm install && npm run build"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
